# r4r

./: CMakeLists.txt  LICENSE  README.md  doxyfile  r4r.pro
clam/: clam.pro  clamicon.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  preferences.cpp  preferences.h  preferences.ui  viewer.cpp  viewer.h
matlab/: r4r_plot_frame.m  r4r_read_cam_params.m  r4r_read_dense_mat.m  r4r_read_dense_mat_from_stream.m  r4r_read_exr.cpp  r4r_read_features.m  r4r_read_features.m~  r4r_write_cam_params.m  r4r_write_dense_mat.m  r4r_write_exr.cpp  setup.m
mv_descriptor_learning/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mv_descriptor_learning.pro  preferences.cpp  preferences.h  preferences.ui
python/: setup.py
python/r4r/: __init__.py
python/r4r/core/: __init__.py  bsplines.cpp  bsplines.h  bsplines.py  cam.py  io.cpp  io.h  io.py  unittests.py
r4r_core/: CMakeLists.txt  cam.cpp  cam.h  darray.cpp  darray.h  factor.cpp  factor.h  image.cpp  image.h  interp.cpp  interp.h  intimg.cpp  intimg.h  iter.cpp  iter.h  kernels.cpp  kernels.h  kfilter.cpp  kfilter.h  lm.cpp  lm.h  params.cpp  params.h  pegasos.cpp  pegasos.h  precond.cpp  precond.h  r4r_core.pro  rbuffer.h  rect.cpp  rect.h  rutils.cpp  rutils.h  sarray.cpp  sarray.h  splinecurve.cpp  splinecurve.h  trafo.cpp  trafo.h  types.cpp  (+6 more)
r4r_hardware/: r4r_hardware.pro
r4r_io/: io.h  r4r_io.pro
r4r_motion/: CMakeLists.txt  basic.cpp  basic.h  bbox.cpp  bbox.h  dagg.cpp  dagg.h  descriptor.cpp  descriptor.h  descspecial.cpp  descspecial.h  feature.cpp  feature.h  icp.h  lk.cpp  lk.h  map.cpp  map.h  mtracker.cpp  mtracker.h  pcl.cpp  pcl.h  ptracker.cpp  ptracker.h  r4r_motion.pro  stracker.cpp  stracker.h  tracker.cpp  tracker.h  tracklet.cpp  tracklet.h  tsttrack.cpp  tsttrack.h  tval.cpp  tval.h
r4r_reconstruction/: bbox.cpp  bbox.h  pcl.cpp  pcl.h  r4r_reconstruction.pro  r4r_reconstruction_global.h  trimesh.cpp  trimesh.h  viewer.cpp  viewer.h
robust_regression/: main.cpp  main.h  robust_regression.pro
scratch/: main.cpp  scratch.pro
tvdenoising/: icon.qrc  mainwindow.cpp  mainwindow.h  mainwindow.ui  nabla.cpp  nabla.h  tvdenoising.pro
unit_tests/: camtest.cpp  camtest.h  darraytest.cpp  darraytest.h  kernelstest.cpp  kernelstest.h  main.cpp  rbuffertest.cpp  rbuffertest.h  test_cam.cpp  test_darray.cpp  test_rbuffer.cpp  test_unionfind.cpp  unit_tests.pro
